scenario-3/2-istio-global-services/cluster1/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: eastwestgateway-helloworld-global
  namespace: istio-gateways
spec:
  selector:
    app: istio-eastwestgateway
    istio: eastwestgateway
    topology.istio.io/network: cluster1-network
  servers:
  - hosts:
    - helloworld.global
    name: helloworld-global-eastwest-cluster2
    port:
      name: tls-helloworld-global
      number: 15443
      protocol: TLS
    tls:
      mode: AUTO_PASSTHROUGH
